kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: local.test.com
    http:
      paths:
      - path: /api/auth/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-srv
            port:
              number: 5000
      - path: /api/tickets/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tickets-srv
            port:
              number: 5001
      - path: /api/orders/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: orders-srv
            port:
              number: 5002
      - path: /api/payments/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: payments-srv
            port:
              number: 5003
      # - path: /?(.*)
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: client-srv
      #       port:
      #         number: 3000
